# little-bee-compiler

./: CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  pytest.ini
docs/: CMakeLists.txt  Doxyfile
lb_compiler/lexer/: lexer.py
main/: CMakeLists.txt  main.cpp
main/mock/: assign.lbc  block.lbc  if.lbc  rel.lbc
src/: CMakeLists.txt  hello.cpp  hello.h  lexer.cpp  lexer.h
src/env/: env.cpp  env.h
src/expr/: arith.cpp  arith.h  node.cpp  node.h  op.cpp  op.h  rel.cpp  rel.h  symbol.cpp  symbol.h  temp.cpp  temp.h  unary.cpp  unary.h
src/internal/: error.h  node.cpp  node.h
src/lexer/: lexer.cpp  lexer.h  num.h  tag.h  temp.cpp  temp.h  token.cpp  token.h  type.cpp  type.h
src/parser/: arith.cpp  arith.h  assign.cpp  assign.h  if.cpp  if.h  node.cpp  node.h  op.cpp  op.h  parser.cpp  parser.h  rel.cpp  rel.h  stmt.cpp  stmt.h  symbol.cpp  symbol.h  temp.cpp  temp.h  type.h  unary.cpp  unary.h
src/stmt/: assign.cpp  assign.h  if.cpp  if.h  stmt.cpp  stmt.h
test/: CMakeLists.txt  test_arith.cpp  test_example.cpp  test_hello.cpp  test_lexer.cpp  test_num.cpp  test_parser.cpp
tests/lexer/: test_lexer.py
